--- a/index.html
+++ b/index.html
@@ -471,7 +471,8 @@
                                 0.05rem;
                                 background-color: var(--blue-coler-1);"></div>
                             <div class="nav-item">
-                                <a class="nav-link nav-link-father px-2" href="#">Đăng
+                                <a class="nav-link nav-link-father px-2"
+                                    href="#">Đăng
                                     nhập</a>
                             </div>
                             <div class="m-0 d-none d-lg-block" style="width:
@@ -1195,43 +1196,230 @@
             </div>
         </nav>
 
-        <nav class="pt-3 pb-4">
-            <div class="container d-flex flex-column">
-                <h1 class="txt-blue-3 text-center pt-3">Các hình ảnh hoạt động
-                    của khoa</h1>
-                <div class="underlined_div"></div>
-                <p class="text-center txt-blue-3 mt-3">
-                    Khoa công nghệ thông tin Trường đại học Hạ Long là khoa luôn
-                    năng động và nghiệt huyết.
-                </p>
-                <div id="hoatdongkhoa" class="carousel slide"
-                    data-ride="carousel" data-interval="2000" data-pause="true">
-                    <div class="carousel-inner">
-                        <a href="#" class="carousel-item active">
-                            <img src="img/tintuc1.jpg" class="d-block w-100"
-                                alt="...">
-                        </a>
-                        <a href="" class="carousel-item">
-                            <img src="img/tintuc2.jpg" class="d-block w-100"
-                                alt="...">
-                        </a>
-                        <a href="" class="carousel-item">
-                            <img src="img/tintuc1.jpg" class="d-block w-100"
-                                alt="...">
-                        </a>
+        <nav class="d-flex flex-column py-3">
+            <h1 class="txt-blue-3 text-center pt-3">Các hoạt động
+                và sự kiện của khoa học máy tính</h1>
+            <div class="underlined_div"></div>
+            <div class="d-flex flex-wrap container pt-4">
+                <div class=" col-md-7 col-12 px-0 pt-2 d-flex flex-column">
+                    <h1 class="txt-blue-2">Các hoạt động</h1>
+
+                    <div id="hoatdong"
+                        class="carousel slide pr-3 pl-1" data-ride="carousel"
+                        data-interval="2000" data-pause="true">
+                        <ol class="carousel-indicators m-0">
+                            <li
+                                data-target="#hoatdong"
+                                data-slide-to="0" class="active"
+                                style="background-color:
+                                var(--blue-coler-1);"></li>
+                            <li
+                                data-target="#hoatdong"
+                                data-slide-to="1"
+                                style="background-color:
+                                var(--blue-coler-1);"></li>
+                            <li
+                                data-target="#hoatdong"
+                                data-slide-to="2"
+                                style="background-color:
+                                var(--blue-coler-1);"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <a href="#" class="carousel-item shadow
+                                active">
+                                <div class="d-flex flex-column">
+                                    <img src="img/tintuc1.jpg"
+                                        alt=""
+                                        class=" p-0
+                                        m-0 w-100 rounded"
+                                        style="aspect-ratio:
+                                        3/2;object-fit:
+                                        cover;">
+                                    <h2 class="txt-blue-2 pt-2">Tiêu
+                                        đề</h2>
+                                    <p class="txt-black-2 m-0 pb-2">Nội
+                                        dung
+                                        nội dung nội dung Nội dung
+                                        nội dung nội dung Nội dung
+                                        nội dung nội dung</p>
+                                    <span class="span_time pb-2">28/09/2020
+                                        14:19:00</span>
+                                </div>
+
+                            </a>
+                            <a href="#" class="carousel-item
+                                shadow">
+                                <div class="d-flex flex-column">
+                                    <img src="img/tintuc2.jpg"
+                                        alt=""
+                                        class=" p-0
+                                        m-0 w-100 rounded"
+                                        style="aspect-ratio:
+                                        3/2;object-fit:
+                                        cover;">
+                                    <h2 class="txt-blue-2 pt-2">Tiêu
+                                        đề</h2>
+                                    <p class="txt-black-2 m-0 pb-2">Nội
+                                        dung
+                                        nội dung nội dung Nội dung
+                                        nội dung nội dung Nội dung
+                                        nội dung nội dung</p>
+                                    <span class="span_time pb-2">28/09/2020
+                                        14:19:00</span>
+                                </div>
+                            </a>
+                            <a href="#" class="carousel-item
+                                shadow">
+                                <div class="d-flex flex-column">
+                                    <img src="img/tintuc1.jpg"
+                                        alt=""
+                                        class=" p-0
+                                        m-0 w-100 rounded"
+                                        style="aspect-ratio:
+                                        3/2;object-fit:
+                                        cover;">
+                                    <h2 class="txt-blue-2 pt-2">Tiêu
+                                        đề</h2>
+                                    <p class="txt-black-2 m-0 pb-2">Nội
+                                        dung
+                                        nội dung nội dung Nội dung
+                                        nội dung nội dung Nội dung
+                                        nội dung nội dung</p>
+                                    <span class="span_time pb-2">28/09/2020
+                                        14:19:00</span>
+                                </div>
+                            </a>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-target="#hoatdong" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-target="#hoatdong" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </button>
                     </div>
-                    <button class="carousel-control-prev" type="button"
-                        data-target="#hoatdongkhoa" data-slide="prev">
-                        <span class="carousel-control-prev-icon"
-                            aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button"
-                        data-target="#hoatdongkhoa" data-slide="next">
-                        <span class="carousel-control-next-icon"
-                            aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </button>
+
+                </div>
+                <div class="pt-1 px-0 col-md-5 col-12 d-flex
+                    flex-column">
+                    <div class="d-flex flex-column shadow p-2 rounded">
+                        <h1 class="txt-blue-2">Các sự kiện</h1>
+                        <div class="d-flex flex-column">
+                            <div class="d-flex flex-wrap">
+                                <a href="#" class="pb-2 px-2 col-12">
+                                    <img src="img/tintuc1.jpg" alt="" class="
+                                        p-0
+                                        m-0 w-100 shadow rounded"
+                                        style="aspect-ratio: 2/1;object-fit:
+                                        cover;">
+                                </a>
+
+                            </div>
+                        </div>
+                        <div class="d-flex flex-column">
+                            <div class="d-flex flex-wrap">
+                                <div class="pb-2 px-2">
+                                    <div class="d-flex flex-column border
+                                        rounded
+                                        shadow">
+                                        <p style="background-color: #ffed89;
+                                            font-weight: bold; font-size:
+                                            0.5rem;
+                                            border-bottom: 0.05rem solid
+                                            rgb(150,
+                                            150, 150); color:
+                                            var(--blue-coler-2);"
+                                            class="px-1 py-0 m-auto">Tháng 1</p>
+                                        <p style="font-size: 1rem;
+                                            background-color:
+                                            #ff3434; color: white;"
+                                            class="rounded-bottom text-center
+                                            m-0
+                                            font-weight-bold">27</p>
+                                    </div>
+                                </div>
+
+                                <div class="d-flex flex-column col-8 col-md-8
+                                    p-0">
+                                    <h3 class="txt-blue-2 d-flex"><a
+                                            class="mt-1"
+                                            href="">Tiêu đềềTiêu đềTiêu đềTiêu đ</a>
+                                    </h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="d-flex flex-column">
+                            <div class="d-flex flex-wrap">
+                                <div class="pb-2 px-2">
+                                    <div class="d-flex flex-column border
+                                        rounded
+                                        shadow">
+                                        <p style="background-color: #ffed89;
+                                            font-weight: bold; font-size:
+                                            0.5rem;
+                                            border-bottom: 0.05rem solid
+                                            rgb(150,
+                                            150, 150); color:
+                                            var(--blue-coler-2);"
+                                            class="px-1 py-0 m-auto">Tháng 1</p>
+                                        <p style="font-size: 1rem;
+                                            background-color:
+                                            #ff3434; color: white;"
+                                            class="rounded-bottom text-center
+                                            m-0
+                                            font-weight-bold">27</p>
+                                    </div>
+                                </div>
+
+                                <div class="d-flex flex-column col-8 col-md-8
+                                    p-0">
+                                    <h3 class="txt-blue-2 d-flex"><a
+                                            class="mt-1"
+                                            href="">Tiêu đềềTiêu đềTiêu đềTiêu đ</a>
+                                    </h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="d-flex flex-column">
+                            <div class="d-flex flex-wrap">
+                                <div class="pb-2 px-2">
+                                    <div class="d-flex flex-column border
+                                        rounded
+                                        shadow">
+                                        <p style="background-color: #ffed89;
+                                            font-weight: bold; font-size:
+                                            0.5rem;
+                                            border-bottom: 0.05rem solid
+                                            rgb(150,
+                                            150, 150); color:
+                                            var(--blue-coler-2);"
+                                            class="px-1 py-0 m-auto">Tháng 1</p>
+                                        <p style="font-size: 1rem;
+                                            background-color:
+                                            #ff3434; color: white;"
+                                            class="rounded-bottom text-center
+                                            m-0
+                                            font-weight-bold">27</p>
+                                    </div>
+                                </div>
+
+                                <div class="d-flex flex-column col-8 col-md-8
+                                    p-0">
+                                    <h3 class="txt-blue-2 d-flex"><a
+                                            class="mt-1"
+                                            href="">Tiêu đềềTiêu đềTiêu đềTiêu đ</a>
+                                    </h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center pb-2">
+                            <a href="">xem tất cả</a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </nav>
@@ -1266,6 +1454,8 @@
             <span style="font-size: 0.5rem; text-align: center; color: #fff;"
                 class="pb-1 pt-1">Bản quyền thuộc về Đại học Hạ Long</span>
         </nav>
+
+
     </body>
 
 </html>
